--- a/pages/animaldrug/_content.yaml
+++ b/pages/animaldrug/_content.yaml
@@ -1,12 +1,8 @@
 - url: /animaldrug/event/
-  title: Animal drug adverse events
+  title: Animal Drug adverse events
   description:
-    - "Reports of animal drug side effects, product use errors, product quality problems, and therapeutic failures."
+    - "Reports of drug side effects, product use errors, product quality problems, and therapeutic failures."
 - url: /animaldrug/label/
-  title: Animal drug product labeling
+  title: Animal Drug product labeling
   description:
-    - "Structured product information, including prescribing information, for approved animal drug products."
-- url: /animaldrug/phishpharm/
-  title: Animal drug Phish Pharm
-  description:
-    - "Data from a free, searchable, literature database that details drug metabolism, depletion, and pharmacokinetics in fish."
+    - "Structured product information, including prescribing information, for approved drug products."
