--- a/pages/animaldrug/_meta.yaml
+++ b/pages/animaldrug/_meta.yaml
@@ -1,5 +1,5 @@
 documentTitle: openFDA › Animal Drugs
 label: API endpoints
 title: Animal Drugs
-description: "The U.S. Food and Drug Administration (FDA) regulates over-the-counter and prescription animal drugs in the United States, including biological therapeutics and generic drugs. This work covers more than just medicines. For example, certain grooming and pet care products may be considered drugs."
+description: "The U.S. Food and Drug Administration (FDA) regulates over-the-counter and prescription drugs in the United States, including biological therapeutics and generic drugs. This work covers more than just medicines. For example, fluoride toothpaste, antiperspirants, dandruff shampoos, and sunscreens are all considered drugs."
 path: /animaldrug
