--- a/pages/animaldrug/event/_content.yaml
+++ b/pages/animaldrug/event/_content.yaml
@@ -1,12 +1,15 @@
-- "## About animal drug adverse events"
-- "Section 514.80 (b) (21 CFR 514.80(b)) of FDA regulations requires applicants of approved new animal drug applications (NADAs) and approved abbreviated new animal drug applications (ANADAs) to report adverse drug events and product and manufacturing defects. This continuous monitoring of approved NADAs and ANADAs afford the primary means by which FDA’s Center for Veterinary Medicine (CVM) obtains information regarding potential problems with the safety and efficacy of marketed approved new animal drugs as well as potential product/manufacturing problems."
+- "## About drug adverse events"
+- "The U.S. Food and Drug Administration (FDA) regulates over-the-counter and prescription drugs in the United States, including biological therapeutics and generic drugs. This work covers more than just medicines. For example, fluoride toothpaste, antiperspirants, dandruff shampoos and sunscreens are all considered drugs."
+- "An adverse event is submitted to the FDA to report any undesirable experience associated with the use of a medical product in a patient. For drugs, this includes serious drug side effects, product use errors, product quality problems, and therapeutic failures for prescription or over-the-counter medicines and medicines administered to hospital patients or at outpatient infusion centers."
 - "### Adverse event reports"
-- "This highly simplified schematic illustrates the general nature of an adverse event report. A report may list several animal drug products, as well as several animal or human patient reactions. No individual drug is connected to any individual reaction. **When a report lists multiple drugs and multiple reactions, there is no way to conclude from the data therein that a given drug is responsible for a given reaction.**"
+- "This highly simplified schematic illustrates the general nature of an adverse event report. A report may list several drug products, as well as several patient reactions. No individual drug is connected to any individual reaction. **When a report lists multiple drugs and multiple reactions, there is no way to conclude from the data therein that a given drug is responsible for a given reaction.**"
 - "image"
 - "Any number of the drugs may be marked as *suspect* if thought to be responsible for one or more of the reactions, but that information is not validated. *Concomitant* drugs are those which are not suspected of causing one or more of the reactions. Many drug products appear frequently in adverse event reports simply because they are commonly taken by many people in the population, not because they are responsible for more adverse events."
 - "Reports contain varying levels of detail about the drug products involved, indications for use, route of administration, and dose."
 - "getting-started"
 - "downloads"
 - "### How to search this endpoint"
-- "Make API calls to `https://api.fda.gov/animaldrug/event.json` using search parameters for [fields specific to the animal drug adverse events endpoint.](/animaldrug/event/reference/)"
+- "Make API calls to `https://api.fda.gov/animaldrug/event.json` using search parameters for [fields specific to the drug adverse events endpoint.](/animaldrug/event/reference/)"
 - queryExplorer: oneReport
+- queryExplorer: pharmacologic
+- queryExplorer: reaction
