--- a/pages/animaldrug/event/_infographics.yaml
+++ b/pages/animaldrug/event/_infographics.yaml
@@ -1,17 +1,94 @@
-- title: "Adverse animal drug event reports since 2016"
+- title: "Adverse drug event reports since 2004"
   short: "Reports over time"
   description:
-    - "This is the openFDA API endpoint for animal drug adverse event reports. An adverse event report is submitted to the FDA’s Center for Veterinary Medicine (CVM) to report any undesirable experience associated with the use of an animal drug, including adverse reactions, product use errors, and product/manufacturing problems."
-    - "Section 514.80 (b) (21 CFR 514.80(b)) of FDA regulations requires applicants of approved new animal drug applications (NADAs) and approved abbreviated new animal drug applications (ANADAs) to report adverse drug events and product and manufacturing defects. This continuous monitoring of approved NADAs and ANADAs afford the primary means by which FDA’s Center for Veterinary Medicine (CVM) obtains information regarding potential problems with the safety and efficacy of marketed approved new animal drugs as well as potential product/manufacturing problems."
-  countParam: "original_receive_date"
+    - "This is the openFDA API endpoint for adverse drug events. An adverse event is submitted to the FDA to report any undesirable experience associated with the use of a drug, including serious drug side effects, product use errors, product quality problems, and therapeutic failures."
+    - "Reporting of adverse events by healthcare professionals and consumers is voluntary in the United States. Increases in the total number of adverse events are likely caused by improved reporting. News, enforcement actions, and other phenomena can also spur reporting."
+  countParam: "receivedate"
   filters:
     - title: "All adverse event reports"
       searchParam: ""
-    - title: "Reported by animal owner"
-      searchParam: 'primary_reporter:"Owner"'
-    - title: "Reported by Veterinarian"
-      searchParam: 'primary_reporter:"Veterinarian"'
-    - title: "Where outcome was 'Death'"
-      searchParam: 'outcome.medical_status:"Died"'
-  dateConstraint: original_receive_date
+    - title: "Reported through manufacturers"
+      searchParam: "_exists_:companynumb"
+    - title: "Reported directly by public"
+      searchParam: "_missing_:companynumb"
+    - title: "Where indication for drug use was hypertension"
+      searchParam: "patient.drug.drugindication:hypertension"
+  dateConstraint: receivedate
   type: Line
+- title: "Who reports adverse events?"
+  short: "Who reports?"
+  description:
+    - "The vast majority of adverse event reports are ultimately reported to FDA through drug product manufacturers. But those reports may first be initiated by consumers, health professionals, or others."
+  countParam: "primarysource.qualification"
+  filters:
+    - title: "All adverse event reports"
+      searchParam: ""
+    - title: "Reported through manufacturers"
+      searchParam: "_exists_:companynumb"
+    - title: "Reported directly by public"
+      searchParam: "_missing_:companynumb"
+  dateConstraint: receivedate
+  type: Pie
+- title: "What classes of drugs are reported?"
+  short: "Drug classes"
+  description:
+    - "The seriousness of reported adverse events varies with the associated drugs. This chart shows the drug classes most often associated with adverse event reports. Use the buttons next to the chart to see the difference between reports involving serious reactions and less serious reactions."
+  countParam: "patient.drug.openfda.pharm_class_epc.exact"
+  filters:
+    - title: "All adverse event reports"
+      searchParam: ""
+    - title: "Serious Reactions"
+      searchParam: "serious:1"
+    - title: "Less serious reactions"
+      searchParam: "serious:2"
+  dateConstraint: receivedate
+  type: Bar
+- title: "What indications for use are frequently reported?"
+  short: "Drug indications"
+  description:
+    - "Drugs listed in adverse event reports often have an indication for use specified—a disease being treated, or a certain therapeutic goal. Use the buttons next to the chart to see how indications for use change with different search criteria."
+  countParam: "patient.drug.drugindication.exact"
+  filters:
+    - title: "All"
+      searchParam: ""
+    - title: "Nonsteroidal anti-inflammatory drug class"
+      searchParam: 'patient.drug.openfda.pharm_class_epc:"nonsteroidal+anti-inflammatory+drug"'
+    - title: "Females"
+      searchParam: "patient.patientsex:2"
+    - title: "Females, age 5 to 17"
+      searchParam: "patient.patientsex:2+AND+patient.patientonsetage:[5+TO+17]"
+    - title: "Females, age 55 to 90"
+      searchParam: "patient.patientsex:2+AND+patient.patientonsetage:[55+TO+90]"
+    - title: "Males"
+      searchParam: "patient.patientsex:1"
+    - title: "Males, age 5 to 17"
+      searchParam: "patient.patientsex:1+AND+patient.patientonsetage:[5+TO+17]"
+    - title: "Males, age 55 to 90"
+      searchParam: "patient.patientsex:1+AND+patient.patientonsetage:[55+TO+90]"
+  dateConstraint: receivedate
+  type: Bar
+- title: "What adverse reactions are frequently reported?"
+  short: "Drug reactions"
+  description:
+    - "Adverse reactions range from product quality issues to very serious outcomes, including death. Use the buttons next to the chart to see how reported reactions vary with different search criteria."
+    - "There is no certainty that a reported event (adverse reaction or medication error) was actually due to a product. FDA does not require that a causal relationship between a product and event be proven, and reports do not always contain enough detail to properly evaluate an event."
+  countParam: "patient.reaction.reactionmeddrapt.exact"
+  filters:
+    - title: "All"
+      searchParam: ""
+    - title: "Nonsteroidal anti-inflammatory drug class"
+      searchParam: 'patient.drug.openfda.pharm_class_epc:"nonsteroidal+anti-inflammatory+drug"'
+    - title: "Females"
+      searchParam: "patient.patientsex:2"
+    - title: "Females, age 5 to 17"
+      searchParam: "patient.patientsex:2+AND+patient.patientonsetage:[5+TO+17]"
+    - title: "Females, age 55 to 90"
+      searchParam: "patient.patientsex:2+AND+patient.patientonsetage:[55+TO+90]"
+    - title: "Males"
+      searchParam: "patient.patientsex:1"
+    - title: "Males, age 5 to 17"
+      searchParam: "patient.patientsex:1+AND+patient.patientonsetage:[5+TO+17]"
+    - title: "Males, age 55 to 90"
+      searchParam: "patient.patientsex:1+AND+patient.patientonsetage:[55+TO+90]"
+  dateConstraint: receivedate
+  type: Bar
