--- a/pages/animaldrug/label/reference/_content.yaml
+++ b/pages/animaldrug/label/reference/_content.yaml
@@ -1,9 +1,9 @@
 - "## About"
-- Note that the effective_time of labeling is used to calculate how current data is. Some labeling is dated in the future, and that is reflected in the calculation above.
-- The openFDA drug product labeling API returns data from the [FDA Structured Product Labeling](https://open.fda.gov/data/spl/) (SPL) dataset. This dataset contains structured documentation about regulated products, submitted by manufacturers to FDA. OpenFDA uses the latest available bulk downloads, which have the latest version of every structured product labeling document for products that are actively marketed.
+- Note that the effective time of labeling is used to calculate how current data is. Some labeling is dated in the future, and that is reflected in the calculation above.
+- The openFDA drug product labeling API returns data from the [FDA Structured Product Labeling](https://open.fda.gov/data/spl/) (SPL) dataset. This dataset contains structured documentation about regulated products, submitted by manufacturers to FDA. OpenFDA uses the latest available bulk downloads, which have the latest version of every structured product labeling document for products that are actively marked.
 - "### What is structured product labeling?"
 - Drug manufacturers and distributors submit documentation about their products to FDA. Labeling contains a summary of the essential scientific information needed for the safe and effective use of the drug.
-- The openFDA drug product labeling API returns data from these submissions for both prescription and over-the-counter (OTC) drugs. The labeling is broken into sections, such as indications for use (prescription drugs) or purpose (OTC drugs), adverse reactions, and so forth. There is considerable variation between drug products, since the information required for safe and effective use varies with the unique characteristics of each drug product.
+- The openFDA drug product labeling API returns data from these submissions for all animal drugs. The labeling is broken into sections such as indications for use, purpose, adverse reactions, etc. There is considerable variation between drug products, since the information required for safe and effective use varies with the unique characteristics of each drug.
 - "downloads"
 - "## Anatomy of a response"
 - "This is a simulated openFDA API return for a non-`count` query. It is divided into two high-level sections, `meta` and `results`."
@@ -14,6 +14,7 @@
 - fields:
   - meta.disclaimer
   - meta.license
+  - meta.terms
   - meta.last_updated
   - meta.results.skip
   - meta.results.limit
@@ -24,12 +25,11 @@
 - ul:
   - "Standard SPL fields, including unique identifiers."
   - "Product-specific fields, the order and contents of which are unique to each product."
-  - "An **openfda** section: An annotation with additional product identifiers, such as UPC and brand name, of the drug products listed in the labeling."
+  - "An **openfda** section: An annotation with additional product identifiers."
 - "#### Field variation"
-- Fields vary with the particular product being documented. Some fields are rarely used. Most prescription drug product labeling will feature similar fields, and those fields will contain similar content. Over-the-counter (OTC) drug product labeling will generally feature a different set of fields.
+- Fields vary with the particular product being documented. Some fields are rarely used.
 - The specific requirements for content of these fields vary from product to product. General descriptions of the fields are provided below, along with notable exceptions or exceptional cases. Expect variation.
-- FDA regulations describe these fields more thoroughly than this documentation. The following documents may be useful for more information about [prescription drug product labeling](http://www.accessdata.fda.gov/scripts/cdrh/cfdocs/cfCFR/CFRSearch.cfm?fr=201.57) and [over-the-counter (OTC) drug product labeling](http://www.accessdata.fda.gov/scripts/cdrh/cfdocs/cfCFR/CFRSearch.cfm?fr=201.57).
-- Some fields are considered by the SPL specification as subsections of other fields, but labeling is not always formatted according to the specification. For example, information about prescription drugs’ potential `teratogenic effects` are ordinarily encoded in the teratogenic_effects field, found after (as a subsection of) the `pregnancy` field. However, some labels combine all the content into the `pregnancy` field and do not have a `teratogenic_effects` field. Again, expect variation.
+- Some fields are considered by the SPL specification as subsections of other fields, but labeling is not always formatted according to the specification.
 - Some labeling features data encoded in the wrong fields. These errors may be corrected in subsequent versions of the product labeling.
 - "#### Field order"
 - Fields are ordered naturally, as they were found in the original product labeling. Expect variation in field order from product to product.
@@ -38,9 +38,8 @@
 - example: tables
 - "Here are common examples you may see:"
 - ul:
-  - "`drug_interactions` accompanied by `drug_interactions_table`"
-  - "`adverse_reactions` accompanied by `adverse_reactions_table`"
-  - "`how_supplied` accompanied by `how_supplied_table`"
+  - "`dosage_and_administration` accompanied by `dosage_and_administration_table`"
+  - "`spl_unclassified_section` accompanied by `spl_unclassified_section_table`"
 - "`_table` fields are each tables that are encoded as HTML, one table per string."
 - "## Field-by-field reference"
 - Fields and their contents will vary from product to product. There are major differences between prescription drugs and OTC drugs, for example. The following descriptions are as accurate as possible but do not cover all the potential variation among field contents.
