--- a/pages/animaldrug/label/reference/_content.yaml
+++ b/pages/animaldrug/label/reference/_content.yaml
@@ -14,6 +14,7 @@
 - fields:
   - meta.disclaimer
   - meta.license
+  - meta.terms
   - meta.last_updated
   - meta.results.skip
   - meta.results.limit
