--- a/pages/animaldrug/label/_infographics.yaml
+++ b/pages/animaldrug/label/_infographics.yaml
@@ -6,16 +6,14 @@
     - "This chart shows labeling submissions over time, by looking at their 'effective dates.' The search is limited to dates since June 2009, which excludes a small number of older submissions."
   countParam: "effective_time"
   filters:
-    - title: "All drug labeling submissions"
+    - title: "All animal drug labeling submissions"
       searchParam: ""
-    - title: "Over-the-counter drug labeling"
+    - title: "Over-the-counter animal drug labeling"
       searchParam: "openfda.product_type:otc"
-    - title: "Prescription drug labeling"
+    - title: "Prescription animal drug labeling"
       searchParam: "openfda.product_type:prescription"
-    - title: "Lactose is an inactive ingredient"
-      searchParam: "inactive_ingredient:lactose"
-    - title: "Labeling has a Boxed Warning"
-      searchParam: "_exists_:boxed_warning"
+    - title: "Contraindications include Hepatic Insufficiency"
+      searchParam: 'contraindications:"hepatic insufficiency"'
   type: Line
   dateConstraint: effective_time
 - title: "Routes of administration"
@@ -25,16 +23,14 @@
     - "Most animal drug product labeling describes a drug with a single route of administration—oral, intravenous, topical, and so forth. Click the buttons below to see the top routes of administration noted in various kinds of drug product labeling."
   countParam: "openfda.route.exact"
   filters:
-    - title: "All drug labeling submissions"
+    - title: "All animal drug labeling submissions"
       searchParam: ""
-    - title: "Over-the-counter drug labeling"
+    - title: "Over-the-counter animal drug labeling"
       searchParam: "openfda.product_type:otc"
-    - title: "Prescription drug labeling"
+    - title: "Prescription animal drug labeling"
       searchParam: "openfda.product_type:prescription"
-    - title: "Indication or purpose notes the word migraine"
-      searchParam: 'indications_and_usage:"migraine"+purpose:"migraine"'
-    - title: "Labeling has a Boxed Warning with the word bleeding in it"
-      searchParam: "boxed_warning:bleeding"
+    - title: "Contraindications include Hepatic Insufficiency"
+      searchParam: 'contraindications:"hepatic insufficiency"'
   type: Line
   dateConstraint: false
 - title: "Drug interactions noted in labeling"
