--- a/pages/animaldrug/event/_meta.yaml
+++ b/pages/animaldrug/event/_meta.yaml
@@ -1,7 +1,7 @@
 documentTitle: openFDA › Animal Drugs › Adverse events API
 label: Animal Drug adverse events
 title: Animal Drug adverse events
-description: "An adverse event is submitted to the FDA to report any undesirable experience associated with the use of a drug, including serious drug side effects, product use errors, product quality problems, and therapeutic failures."
+description: "An animal drug adverse event is submitted to the FDA to report an any undesirable experience associate with the use of an animal drug, such as adverse drug reactions, lack of effectiveness or product defects."
 datasets:
   - FAERS
 path: /animaldrug/event
