--- a/pages/animaldrug/event/reference/_content.yaml
+++ b/pages/animaldrug/event/reference/_content.yaml
@@ -1,7 +1,7 @@
 - "## About"
-- "The openFDA drug adverse event API returns data from the [FDA Adverse Event Reporting System (FAERS)](/data/faers/), a database that contains information on adverse event and medication error reports submitted to FDA. Currently, this data covers publically releasable records submitted to the FDA from 2004-2013. The data is updated quarterly."
-- "An adverse event is submitted to the FDA to report any undesirable experience associated with the use of a medical product in a patient. For drugs, this includes serious drug side effects, product use errors, product quality problems, and therapeutic failures for prescription or over-the-counter medicines and medicines administered to hospital patients or at outpatient infusion centers."
-- "Reporting of adverse events by healthcare professionals and consumers is voluntary in the United States. FDA receives some adverse event reports directly from healthcare professionals (such as physicians, pharmacists, nurses and others) and consumers (such as patients, family members, lawyers and others). Healthcare professionals and consumers may also report adverse events to the products’ manufacturers. If a manufacturer receives an adverse event report, it is normally required to send the report to FDA."
+- "The openFDA animal drug adverse event API returns data from the Center for Veterinary Medicine, which collects information on adverse animal drug experiences and product/manufacturing defects. An adverse event is submitted via FDA Form 1932 to report any adverse drug experience (ADE) associated with the use of an animal drug. This includes adverse drug reactions, lack of effectiveness, and product and manufacturing defects."
+- "Section 514.80 (b) (21 CFR 514.80(b)) of FDA regulations requires applicants of approved new animal drug applications (NADAs) and approved abbreviated new animal drug applications (ANADAs) to report adverse drug events and product and manufacturing defects. This continuous monitoring of approved NADAs and ANADAs afford the primary means by which FDA’s Center for Veterinary Medicine (CVM) obtains information regarding potential problems with the safety and efficacy of marketed approved new animal drugs as well as potential product/manufacturing problems."
+- "CVM relies on adverse event reports to facilitate a determination as to whether there may be grounds for suspending or withdrawing approval of an animal drug application. The information contained in these reports also assists CVM in working with firms to minimize ADEs due to manufacturing problems, previously unidentified or uncommon side effects, and off-label use of animal drugs."
 - disclaimer:
   - "FAERS data does have limitations. There is no certainty that the reported event (adverse event or medication error) was actually due to the product. FDA does not require that a causal relationship between a product and event be proven, and reports do not always contain enough detail to properly evaluate an event."
   - "Further, FDA does not receive reports for every adverse event or medication error that occurs with a product. Many factors can influence whether or not an event will be reported, such as the time a product has been marketed and publicity about an event."
@@ -17,8 +17,8 @@
 - "downloads"
 - "FDA releases quarterly updates to FAERS data. OpenFDA uses these extracts, but processes the data further before supplying them through the API. There are no plans for the openFDA initiative to change the FAERS release protocols. At this time it is anticipated that FAERS downloads will continue to be available from the same site on the same quarterly schedule. OpenFDA is a research project to make access to these datasets easier, not replace the current process. The information available through openFDA is not for clinical production use. While FDA makes every effort to ensure the data is accurate, it should be assumed that all results are not validated."
 - "### Results"
-- "For non-`count` queries, the `results` section includes matching adverse event reports returned by the API."
-- "Each adverse event report consists of these major sections:"
+- "For non-`count` queries, the `results` section includes matching animal drugs adverse event reports returned by the API."
+- "Each animal drug adverse event report consists of these major sections:"
 - ul:
   - "**Header:** General information about the adverse event"
   - "**Patient Information:** Details on the patient who experienced the event, such as age, weight, sex, etc."
@@ -29,84 +29,61 @@
 - "General information about the adverse event."
 - example: header
 - fields:
-  - safetyreportid
-  - safetyreportversion
-  - receivedate
-  - receivedateformat
-  - receiptdate
-  - receiptdateformat
-  - serious
-  - seriousnessdeath
-  - seriousnessdisabling
-  - seriousnesshospitalization
-  - seriousnesslifethreatening
-  - seriousnessother
-  - transmissiondate
-  - transmissiondateformat
-  - duplicate
-  - companynumb
-  - occurcountry
-  - primarysourcecountry
-  - primarysource
-  - primarysource.qualification
-  - primarysource.reportercountry
-  - reportduplicate
-  - reportduplicate.duplicatesource
-  - reportduplicate.duplicatenumb
-  - sender
-  - sender
-  - sender.sendertype
-  - sender.senderorganization
-  - receiver
+  - report_id
+  - original_receive_date
+  - primary_reporter
+  - secondary_reporter
+  - type_of_submission
+  - type_of_information
+  - serious_ae
+  - domestic_or_foreign
 - "### Patient"
-- "Information about the patient in the adverse event report."
+- "Information about the patient(s) or animal(s) in the adverse event report."
 - example: patient
 - fields:
-  - patient.patientonsetage
-  - patient.patientonsetageunit
-  - patient.patientsex
-  - patient.patientweight
-  - patient.patientdeath
-  - patient.patientdeath.patientdeathdate
-  - patient.patientdeath.patientdeathdateformat
+  - number_of_animals_treated
+  - number_of_animals_affected
+  - animal
+  - health_assessment_prior_to_exposure
+  - health_assessment_prior_to_exposure.assessed_by
+  - first_exposure_date
+  - last_exposure_date
 - "#### Drugs"
-- "This section contains information about the drugs listed in the adverse event report."
+- "Information on the drugs taken while the event was experienced."
 - fields:
-  - patient.drug.actiondrug
-  - patient.drug.drugadditional
-  - patient.drug.drugcumulativedosagenumb
-  - patient.drug.drugcumulativedosageunit
-  - patient.drug.drugdosageform
-  - patient.drug.drugintervaldosagedefinition
-  - patient.drug.drugintervaldosageunitnumb
-  - patient.drug.drugrecurreadministration
-  - patient.drug.drugseparatedosagenumb
-  - patient.drug.drugstructuredosagenumb
-  - patient.drug.drugstructuredosageunit
-  - patient.drug.drugadministrationroute
-  - patient.drug.drugauthorizationnumb
-  - patient.drug.drugbatchnumb
-  - patient.drug.drugcharacterization
-  - patient.drug.drugdosagetext
-  - patient.drug.drugenddate
-  - patient.drug.drugenddateformat
-  - patient.drug.drugindication
-  - patient.drug.drugstartdate
-  - patient.drug.drugstartdateformat
-  - patient.drug.drugtreatmentduration
-  - patient.drug.drugtreatmentdurationunit
-  - patient.drug.medicinalproduct
+  - frequency_of_administration
+  - administered_by
+  - dose
+  - dose.quantity
+  - used_according_to_label
+  - off_label_use
+  - previous_exposure_to_drug
+  - previous_ae_to_drug
+  - ae_abated_after_stopping_drug
+  - ae_reappeared_after_resuming_drug
+  - drug.manufacturing_date
+  - drug.lot_number
+  - drug.lot_expiration
+  - drug.product_ndc
+  - drug.dosage_form
+  - drug.number_of_defective_items
+  - drug.number_of_items_returned
+  - drug.atc_vet_code
+  - drug.active_ingredients
 - "#### openFDA fields"
-- "Different datasets use different drug identifiers—brand name, generic name, NDA, NDC, etc. It can be difficult to find the same drug in different datasets. And some identifiers, like pharmacologic class, are useful search filters but not available in all datasets."
-- "OpenFDA features harmonization of drug identifiers, to make it easier to connect adverse event report records to other drug information. Drug products that appear in FAERS records are joined to the NDC dataset first on brand name, and if there is no brand name, on generic name. If that is succesful, further links are established to other datasets. The linked data is listed as an `openfda` annotation in the `patient.drug` section of a result."
-- "Roughly 86% of adverse event records have at least one `openfda` section. Because the harmonization process requires an exact match, some drug products cannot be harmonized in this fashion—for instance, if the drug name is misspelled. Some drug products will have `openfda` sections, while others will never, if there was no match during the harmonization process."
+- "Different datasets use different drug identifiers—brand name, generic name, NDC, etc. It can be difficult to find the same drug in different datasets. And some identifiers, like pharmacologic class, are useful search filters but not available in all datasets."
+- "OpenFDA features harmonization of drug identifiers, to make it easier to connect adverse event report records to other veterinary medicinal product information. A majority of adverse event records have a least one openfda section. Because the harmonization process requires an exact match, some veterinary medicinal products cannot be harmonized in this fashion—for instance, if the product name is misspelled. Some products will have openfda sections, while other will never, if there was no match during the harmonization process."
 - fields:
-  - patient.drug.openfda
+  - drug.openfda
+  - drug.manufacturer.registration_number
 - disclaimer:
   - "A single drug product listed in an adverse event report may have multiple associated manufacturer names, NDCs, and SPLs in a corresponding `openfda` section. That is because the drug may have multiple manufacturers, packagers, dosage forms, etc. Their inclusion in the `openfda` section does not mean that they had any connection to the adverse event. The ordering of data in `openfda` fields is not significant."
 - "#### Reactions"
+- "Information on the reactions experienced."
 - fields:
-  - patient.reaction.reactionmeddrapt
-  - patient.reaction.reactionmeddraversionpt
-  - patient.reaction.reactionoutcome
+  - onset_date
+  - duration
+  - reaction.veddra_term_name
+  - time_between_exposure_and_onset
+  - treated_for_ae
 - "datasets"
