--- a/pages/animaldrug/event/_fields.yaml
+++ b/pages/animaldrug/event/_fields.yaml
@@ -30,6 +30,7 @@ properties:
         Not Applicable: "The veterinary medicinal product was neither stopped nor re-introduced."
     type: boolean
   animal:
+    description: "Animal(s) involved in the adverse drug event."
     properties:
       age:
         description: "Describes the age of the affected animal(s)."
@@ -254,7 +255,7 @@ properties:
           application_number:
             type: array
             items:
-              description:
+              description: "A combination of the 3-character ISO 3166 code for the country where the veterinary medicinal product is approved, the 8-character RA Identifier Code, and the registration number of the veterinary medicinal product involved in the adverse event."
               format:
               is_exact: false
               possible_values:
@@ -282,7 +283,7 @@ properties:
               possible_values:
               type: string
           is_original_packager:
-            description:
+            description: "Original packager of the veterinary medicinal product."
             format:
             is_exact: false
             possible_values:
@@ -376,13 +377,13 @@ properties:
               possible_values:
               type: string
           rxstring:
-            description:
+            description: "The RxString of an RxConcept."
             format:
             is_exact: false
             possible_values:
             type: string
           rxtty:
-            description:
+            description: "The term type of an RxConcept."
             format:
             is_exact: false
             possible_values:
@@ -414,13 +415,13 @@ properties:
           unii:
             type: array
             items:
-              description:
+              description: "A non-proprietary, free, unique, unambiguous, non semantic, alphanumeric identifier based on a substance’s molecular structure and/or descriptive information."
               format:
               is_exact: false
               possible_values:
               type: string
           upc:
-            description:
+            description: "Universal Product Code of the veterinary medicinal product."
             format:
             is_exact: false
             possible_values:
@@ -433,7 +434,7 @@ properties:
         type: string
     type: object
   duration:
-    description: "The numeric value for the duration of the adverse event."
+    description: "The actual or approximate time the adverse event lasted."
     format:
     is_exact: false
     possible_values:
@@ -495,7 +496,7 @@ properties:
     possible_values:
     type: integer
   number_of_animals_treated:
-    description: "Number of animals being treated directly but the veterinary medicinal product."
+    description: "Number of animals being treated directly by the veterinary medicinal product."
     format:
     is_exact: false
     possible_values:
