--- a/pages/animaldrug/event/reference/_meta.yaml
+++ b/pages/animaldrug/event/reference/_meta.yaml
@@ -1,6 +1,6 @@
 documentTitle: openFDA › Animal Drugs › Adverse events reference guide
 name: Animal Drug adverse events reference
-description: "An animal drug adverse event is submitted to the FDA to report an any undesirable experience associate with the use of an animal drug, such as adverse drug reactions, lack of effectiveness or product defects."
+description: "An animal drug adverse event is submitted to the FDA to report on any undesirable experience associated with the use of an animal drug, such as adverse drug reactions, lack of effectiveness or product defects."
 datasets:
   - FAERS
 label: Drug adverse events
