--- a/pages/animaldrug/label/_infographics.yaml
+++ b/pages/animaldrug/label/_infographics.yaml
@@ -16,29 +16,12 @@
       searchParam: 'contraindications:"hepatic insufficiency"'
   type: Line
   dateConstraint: effective_time
-- title: "Routes of administration"
-  short: "Routes of administration"
-  dataset: SPL
-  description:
-    - "Most animal drug product labeling describes a drug with a single route of administration—oral, intravenous, topical, and so forth. Click the buttons below to see the top routes of administration noted in various kinds of drug product labeling."
-  countParam: "openfda.route.exact"
-  filters:
-    - title: "All animal drug labeling submissions"
-      searchParam: ""
-    - title: "Over-the-counter animal drug labeling"
-      searchParam: "openfda.product_type:otc"
-    - title: "Prescription animal drug labeling"
-      searchParam: "openfda.product_type:prescription"
-    - title: "Contraindications include Hepatic Insufficiency"
-      searchParam: 'contraindications:"hepatic insufficiency"'
-  type: Line
-  dateConstraint: false
 - title: "Drug interactions noted in labeling"
   short: "Drug interactions"
   dataset: SPL
   description:
     - Drug product labeling must indicate known interactions with foods and other drug products. This chart shows top classes of drugs whose labeling notes interactions.
-  countParam: "openfda.pharm_class_epc.exact"
+  countParam: "openfda.generic_name.exact"
   filters:
     - title: "Labeling noting anthelmintics in the interactions section"
       searchParam: "drug_interactions:anthelmintics"
