fda-126 Added initial Phish Pharms pages.

--- a/pages/animaldrug/_content.yaml
+++ b/pages/animaldrug/_content.yaml
@@ -6,3 +6,7 @@
   title: Animal Drug product labeling
   description:
     - "Structured product information, including prescribing information, for approved animal drug products."
+- url: /animaldrug/phishpharm/
+  title: Animal Drug Phish Pharm
+  description:
+    - "Placeholder."
