--- a/pages/animaldrug/phishpharm/_content.yaml
+++ b/pages/animaldrug/phishpharm/_content.yaml
@@ -1,9 +1,10 @@
-- "## About Pharmacokinetics Data in Fish"
-- Increased aquaculture production in the US and abroad has led to increased concern over the use of drugs and chemicals (both legal and illegal) in the production of fish products. To address this, the FDA’s Center for Veterinary Medicine (CVM), Office of Research developed and regularly updated Phish-Pharm, a free, searchable, literature database that details drug metabolism, depletion, and pharmacokinetics in fish. The goal of the database is to aid researchers in finding and generating the necessary data to support safe and effective drug approvals for aquatic animals, to improve screening methods for illegal drugs, and to aid in study design by highlighting data gaps. The database was updated in 2014.
+- "## About drug product labeling"
+- Drug manufacturers and distributors submit documentation about their products to FDA in the [Structured Product Labeling (SPL) format](http://labels.fda.gov/). The labeling is a "living document" that changes over time to reflect increased knowledge about the safety and effectiveness of the drug.
+- The openFDA drug product labels API returns data from these submissions. The labels are broken into sections, such as indications for use or purpose, adverse reactions, and so forth. There is considerable variation between drug products in terms of these sections and their contents, since the information required for safe and effective use varies with the unique characteristics of each drug product.
 - "getting-started"
 - "downloads"
 - "### How to search this endpoint"
-- "Make API calls to `http://5c2d7184.ngrok.io/animaldrug/phishpharm.json` using search parameters for [fields specific to the animal phish pharm endpoint.](/animaldrug/phishpharm/reference/)"
+- "Make API calls to `http://5c2d7184.ngrok.io/animaldrug/label.json` using search parameters for [fields specific to the animal drug labeling endpoint.](/animaldrug/label/reference/)"
 - queryExplorer: oneLabel
 - queryExplorer: boxedWarning
 - queryExplorer: countByType
