fda-128 Updated more phish pharms stuff & a bit of animal AE and labeling.

--- a/pages/animaldrug/_content.yaml
+++ b/pages/animaldrug/_content.yaml
@@ -9,4 +9,4 @@
 - url: /animaldrug/phishpharm/
   title: Animal Drug Phish Pharm
   description:
-    - "Placeholder."
+    - "Data from a free, searchable, literature database that details drug metabolism, depletion, and pharmacokinetics in fish."
